Eligible for quick/offline review.